Added styles from Styled Components

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #0c1113;
 }
 
 @keyframes App-logo-spin {
